<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.zuzex.look2meet.FilterActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/top_menu"
                  android:background="@drawable/top_bar"
                  android:layout_height="60dp"
                  android:layout_width="fill_parent"
                  android:orientation="horizontal">

        <ImageButton
            style="@style/look2meet.top_bar_button"
            android:id="@+id/back_button"
            android:src="@drawable/bar_button_back2x"
            android:onClick="BackClicked"
            />

        <TextView
            style="@style/look2meet.top_bar_caption"
            android:id="@+id/announces_filter_caption"
            android:layout_weight="0.9"
            android:text="@string/announes_filter_activity_title"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/gender"
            android:textSize="16sp"
            android:id="@+id/textViewFree"
            android:layout_gravity="center_vertical"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:id="@+id/spinnerSex"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:id="@+id/textViewSecondItem"
            android:text="@string/age"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/range_from"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:id="@+id/spinnerAgeFilter"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/range_to"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:id="@+id/spinnerTo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/checkIn"
            android:textSize="16sp"
            android:id="@+id/textView3"
            android:layout_gravity="center_vertical"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:id="@+id/spinnerCheckin"/>

    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/proceed"
            android:id="@+id/buttonFilterClick"
            android:onClick="filterClick" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            android:id="@+id/buttonCancel"
            android:onClick="BackClicked" />

    </LinearLayout>

</LinearLayout>
