<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:weightSum="1"
    android:background="@android:color/white"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/top_bar">

        <include
            android:id="@+id/top_back_bar"
            layout="@layout/back_button_only_menu"
            android:layout_width="42dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textViewTop"
            style="@style/look2meet.top_bar_caption"
            android:text="@string/title_activity_registration" />
    </RelativeLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="418dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@android:color/white"
        tools:context="com.zuzex.look2meet.RegistrationActivity">
        <Button
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:text="@string/title_activity_registration"
            android:id="@+id/registration_enter_button"
            style="@style/look2meet.buttons"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:enabled="false"/>

        <EditText
            android:hint="E-mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/registration_email"
            android:layout_marginTop="27dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="false"/>

        <EditText
            android:hint="@string/registration_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/registration_name"
            android:layout_below="@+id/registration_email"
            android:layout_marginTop="5dp" />

        <EditText
            android:hint="@string/registration_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registration_password"
            android:layout_below="@+id/registration_name"
            android:layout_marginTop="5dp" />

        <EditText
            android:hint="@string/registration_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registration_confirm_password"
            android:layout_below="@+id/registration_password"
            android:layout_marginTop="5dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_confirm_password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical|center_horizontal">

            <ToggleButton
                android:layout_width="300px"
                android:layout_height="30dp"
                android:text="@string/registration_sex"
                android:id="@+id/toggleButton"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:textOff="@string/registration_sex_male"
                android:textOn="@string/registration_sex_female"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:background="@drawable/toggle_selector"
                android:textColor="@android:color/white"
                android:textSize="14dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_sex"
                android:id="@+id/textViewDescription"
                android:textSize="14dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_marginTop="10px"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_confirm_license"
                android:id="@+id/textViewAgree"
                android:textSize="14dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/black"
                android:autoLink="web"
                android:clickable="true"/>

            <Switch
                android:layout_width="300px"
                android:layout_height="wrap_content"

                android:id="@+id/registration_agree_switch"
                android:checked="false"
                android:textSize="14dp"
                android:layout_marginTop="40dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </RelativeLayout>


    <ImageView
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:id="@+id/footer_logo"
        android:background="@drawable/footer_logo"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="65dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/copyright"
        android:textColor="#ffffff"
        android:id="@+id/textViewStatic"
        android:background="@drawable/start_footer"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="10dp" />

</LinearLayout>
