<?xml version="1.0" encoding="utf-8"?>
<!--
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/bottom_menu_common"
              android:background="@drawable/bottom_bar"
              android:layout_width="fill_parent"
              android:layout_height="74dp"
              android:orientation="horizontal">

    <ImageButton
        style="@style/look2meet.top_bar_button_disabled"
        android:id="@+id/menu_button_profiles"
        android:src="@drawable/bb_me_active"
        android:onClick="profilesClicked"
        />

    <ImageButton
        style="@style/look2meet.top_bar_button_disabled"
        android:id="@+id/menu_button_menu"
        android:src="@drawable/bb_menu_active"
        android:onClick="openMenu" />

    <ImageButton
        style="@style/look2meet.top_bar_button_disabled"
        android:id="@style/look2meet.top_bar_button"
        android:src="@drawable/bb_checkin_active"
        android:onClick="checkInCliked" />

    <ImageButton
        style="@style/look2meet.top_bar_button_disabled"
        android:id="@+id/menu_button_chat"
        android:src="@drawable/bb_chat_active" />

</LinearLayout>
    -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/bottom_menu_common"
              android:background="@drawable/bottom_bar"
              android:layout_width="fill_parent"
              android:layout_height="72dp"
              android:orientation="horizontal">

    <LinearLayout
        style="@style/look2meet.bottom_bar_button_layout_disabled"
        android:id="@+id/menu_button_profiles">

        <ImageView
            style="@style/look2meet.botom_bar_button_image"
            android:src="@drawable/bottom_bar_me"/>

        <TextView
            style="@style/look2meet.botom_bar_button_text"
            android:text="@string/bottom_bar_me"/>

    </LinearLayout>

    <LinearLayout
        style="@style/look2meet.bottom_bar_button_layout_disabled"
        android:id="@+id/menu_button_menu">

        <ImageView
            style="@style/look2meet.botom_bar_button_image"
            android:src="@drawable/bottom_bar_menu"/>

        <TextView
            style="@style/look2meet.botom_bar_button_text"
            android:text="@string/bottom_bar_menu"/>

    </LinearLayout>

    <LinearLayout
        style="@style/look2meet.bottom_bar_button_layout_disabled"
        android:id="@+id/menu_button_checkin">

        <ImageView
            style="@style/look2meet.botom_bar_button_image"
            android:src="@drawable/bottom_bar_checkin"/>

        <TextView
            style="@style/look2meet.botom_bar_button_text"
            android:text="@string/bottom_bar_checkin"/>

    </LinearLayout>

    <LinearLayout
        style="@style/look2meet.bottom_bar_button_layout_disabled"
        android:id="@+id/menu_button_chat">

        <ImageView
            style="@style/look2meet.botom_bar_button_image"
            android:src="@drawable/bottom_bar_chat"/>

        <TextView
            style="@style/look2meet.botom_bar_button_text"
            android:text="@string/bottom_bar_chat"/>

    </LinearLayout>

</LinearLayout>