<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/top_menu"
                  android:background="@drawable/top_bar"
                  android:layout_height="60dp"
                  android:layout_width="fill_parent"
                  android:orientation="horizontal">

        <ImageButton
            style="@style/look2meet.top_bar_button"
            android:id="@+id/back_button"
            android:src="@drawable/bar_button_back2x"
            android:onClick="BackClicked"
            />

        <TextView
            style="@style/look2meet.top_bar_caption"
            android:id="@+id/activity_top_caption"
            android:layout_weight="0.9"
            android:text="@string/who_are_you_looking_for"
            />

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:layout_gravity="center_vertical"
                android:text="@string/registration_sex"
                android:textSize="16sp"
                android:textAlignment="center"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:id="@+id/spinner_sex"
                android:entries="@array/Sex"
                android:textAlignment="center"
                android:layout_gravity="center|center_vertical|center_horizontal"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/age"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:id="@+id/spinner_age1"
                android:layout_gravity="center|center_vertical|center_horizontal"
                android:gravity="center"
                />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:id="@+id/spinner_age2"
                android:layout_gravity="center|center_vertical|center_horizontal"
                android:gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/proceed"
            android:id="@+id/thx"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            android:clickable="true"
            android:id="@+id/btnskip"/>

    </LinearLayout>

</LinearLayout>