<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="0dp"
              android:paddingRight="0dp"
              android:paddingTop="0dp"
              android:paddingBottom="0dp"
              android:orientation="vertical"
              tools:context="com.zuzex.look2meet.OrgList.CheckinsFilterActivity"
              android:background="@android:color/white">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/top_menu"
                  android:background="@drawable/top_bar"
                  android:layout_height="60dp"
                  android:layout_width="fill_parent"
                  android:orientation="horizontal">

        <ImageButton
            style="@style/look2meet.top_bar_button"
            android:id="@+id/back_button"
            android:src="@drawable/bar_button_back2x"
            android:onClick="BackClicked"
            />

        <TextView
            style="@style/look2meet.top_bar_caption"
            android:id="@+id/announces_filter_caption"
            android:layout_weight="0.9"
            android:text="@string/announes_filter_activity_title"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/announes_filter_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/ok"
            android:onClick="OkClicked"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            android:onClick="BackClicked"/>

    </LinearLayout>

</LinearLayout>